Fix some z-index madness

--- a/src/static/global.css
+++ b/src/static/global.css
@@ -188,7 +188,7 @@ a {
 	height: 100%;
 	padding: max(5vw, var(--gap));
 	background: rgba(255, 255, 255, 0.9);
-	z-index: 2;
+	z-index: 200;
 }
 
 .fullscreen .chart__container {
@@ -239,6 +239,7 @@ a {
 }
 .control--close {
 	margin: 0 0 0 auto;
+	z-index: 201;
 }
 
 .control--close svg {
